src/tests/snapshots/niri__tests__window_opening__check_target_size@omT-ofT-dwF1000-b-wfsBU.snap
---
source: src/tests/window_opening.rs
description: "open maximized: true\nopen floating: true\ndefault column width: F1000\nborder on\nwant fullscreen: BU"
expression: snapshot
---
initial configure:
size: 1000 × 0, bounds: 1272 × 712, states: []

post-map configures:
size: 1 × 1, bounds: 1272 × 712, states: [Activated]
